--- a/Proyecto01/h1.html
+++ b/Proyecto01/h1.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
+    <title>Titulo</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="author" content="nombre">
+    <link href="fichero" rel="stylesheet" type="text/css" />
+    <script src="fichero" type="text/javascript"></script>
+   
 </head>
 <body>
-    
+    <header>
+    </header>
+    <nav>
+    </nav>
+    <main>
+        <section>
+            <article>
+                <div>
+
+                </div>
+            </article>
+        </section>
+    </main>
+    <footer> 
+    </footer>
+    <aside>
+    </aside>
 </body>
 </html>
