--- a/Proyecto01/h1.html
+++ b/Proyecto01/h1.html
@@ -10,21 +10,19 @@
 </head>
 <body>
     <header>
+        <p>Gestión de residuos</p>
     </header>
-    <nav>
-    </nav>
-    <main>
-        <section>
-            <article>
-                <div>
-
-                </div>
-            </article>
-        </section>
-    </main>
-    <footer> 
-    </footer>
+    <div class="contenedores">
+        <p>CONTENEDORES</p>
+    </div>
+    <div class="residuos">
+        <P>RESIDUOS</P>
+    </div>
+    <div class="reciclaje">
+        <p>RECICLAJE</p>
+    </div>
     <aside>
+        <p>Fuentes</p>
     </aside>
 </body>
 </html>
