--- a/Proyecto01/Contenedores/Contenedores.html
+++ b/Proyecto01/Contenedores/Contenedores.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Docum4ent</title>
 </head>
 <body>
     <header>
         <link href="../h1.html">H1</link>
+        <div class="contenedoresStyle" id="amarillo"></div>
+        <div class="contenedoresStyle" id="verde"></div>
+        <div class="contenedoresStyle" id="marron"></div>
+        <div class="contenedoresStyle" id="gris"></div>
+        <div class="contenedoresStyle" id="aceite"></div>
+        <div class="contenedoresStyle" id="azul"></div>
+        <div class="contenedoresStyle" id="rojo"></div>
+        <div class="contenedoresStyle" id="negro"></div>
     </header>
 </body>
 </html>
