--- a/Proyecto01/h1.html
+++ b/Proyecto01/h1.html
@@ -15,11 +15,11 @@
     <div class="contenedores">
         <p>CONTENEDORES</p>
     </div>
-    <div class="residuos">
-        <P>RESIDUOS</P>
-    </div>
     <div class="reciclaje">
         <p>RECICLAJE</p>
+    </div>
+    <div class="curiosidades">
+        <P>CURIOSIDADES</P>
     </div>
     <aside>
         <p>Fuentes</p>
