Created script for menu

--- a/Proyecto01/h1.html
+++ b/Proyecto01/h1.html
@@ -5,20 +5,21 @@
     <meta charset="UTF-8">
     <meta name="author" content="nombre">
     <link href="fichero" rel="stylesheet" type="text/css" />
-    <script src="fichero" type="text/javascript"></script>
-   
+    <script src="js/script.js" type="text/javascript"></script>
+    
 </head>
 <body>
     <header>
         <p>Gestión de residuos</p>
     </header>
-    <div class="contenedores">
+    
+    <div class="contenedores" id="contenedores">
         <p>CONTENEDORES</p>
     </div>
-    <div class="reciclaje">
+    <div class="reciclaje" id="reciclaje">
         <p>RECICLAJE</p>
     </div>
-    <div class="curiosidades">
+    <div class="curiosidades" id="curiosidades">
         <P>CURIOSIDADES</P>
     </div>
     <aside>
