--- a/Proyecto01/h1.html
+++ b/Proyecto01/h1.html
@@ -4,7 +4,7 @@
     <title>Titulo</title>
     <meta charset="UTF-8">
     <meta name="author" content="nombre">
-    <link href="fichero" rel="stylesheet" type="text/css" />
+    <link href="css/h1.css" rel="stylesheet" type="text/css" />
     <script src="js/script.js" type="text/javascript"></script>
     
 </head>
