Fixed link contenedores

--- a/Proyecto01/h1.html
+++ b/Proyecto01/h1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Titulo</title>
+    <title>menosBasura.com</title>
     <meta charset="UTF-8">
     <meta name="author" content="nombre">
     <link href="css/h1.css" rel="stylesheet" type="text/css"/>
