--- a/Proyecto01/Contenedores/Contenedores.html
+++ b/Proyecto01/Contenedores/Contenedores.html
@@ -3,15 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>menosBasura.com</title>
+    <title>Docum4ent</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
         <link href="../h1.html">H1</link>
-        <div class="contenedoresStyle" id="amarillo"></div>
-        <div class="contenedoresStyle" id="verde"></div>
-        <div class="contenedoresStyle" id="marron"></div>
+        <div class="contenedoresStyle" id="amarillo">
+            <img src="" alt="contenedor amarillo" width="150" height="150"/>
+        </div>
+        <div class="contenedoresStyle" id="verde">
+            <img src="" alt="contenedor verde" width="150" height="150"/>
+        </div>
+        <div class="contenedoresStyle" id="marron">
+            <img src="" alt="contenedor marron" width="150" height="150"/>
+        </div>
         <div class="contenedoresStyle" id="gris"></div>
         <div class="contenedoresStyle" id="aceite"></div>
         <div class="contenedoresStyle" id="azul"></div>
