--- a/Proyecto01/Contenedores/Contenedores.html
+++ b/Proyecto01/Contenedores/Contenedores.html
@@ -10,7 +10,7 @@
     <header>
         <link href="../h1.html">H1</link>
         <div class="contenedoresStyle" id="amarillo">
-            <img src="" alt="contenedor amarillo" width="150" height="150"/>
+            <img src="../img/cuboamarillo.jpg" alt="contenedor amarillo" width="150" height="150"/>
         </div>
         <div class="contenedoresStyle" id="verde">
             <img src="" alt="contenedor verde" width="150" height="150"/>
@@ -19,10 +19,16 @@
             <img src="" alt="contenedor marron" width="150" height="150"/>
         </div>
         <div class="contenedoresStyle" id="gris"></div>
+        <img src="" alt="contenedor marron" width="150" height="150"/>
         <div class="contenedoresStyle" id="aceite"></div>
+
+        <img src="" alt="contenedor marron" width="150" height="150"/>
         <div class="contenedoresStyle" id="azul"></div>
+        <img src="" alt="contenedor marron" width="150" height="150"/>
         <div class="contenedoresStyle" id="rojo"></div>
+        <img src="" alt="contenedor marron" width="150" height="150"/>
         <div class="contenedoresStyle" id="negro"></div>
+        <img src="" alt="contenedor marron" width="150" height="150"/>
     </header>
 </body>
 </html>
