--- a/Proyecto01/Contenedores/Contenedores.html
+++ b/Proyecto01/Contenedores/Contenedores.html
@@ -13,7 +13,7 @@
             <img src="../img/cuboamarillo.jpg" alt="contenedor amarillo" width="150" height="150"/>
         </div>
         <div class="contenedoresStyle" id="verde">
-            <img src="" alt="contenedor verde" width="150" height="150"/>
+            <img src="../img/cuboverde.jpg" alt="contenedor verde" width="150" height="150"/>
         </div>
         <div class="contenedoresStyle" id="marron">
             <img src="" alt="contenedor marron" width="150" height="150"/>
