--- a/Proyecto01/Contenedores/Contenedores.html
+++ b/Proyecto01/Contenedores/Contenedores.html
@@ -16,19 +16,23 @@
             <img src="../img/cuboverde.jpg" alt="contenedor verde" width="150" height="150"/>
         </div>
         <div class="contenedoresStyle" id="marron">
-            <img src="" alt="contenedor marron" width="150" height="150"/>
+            <img src="../img/cubomarron.png" alt="contenedor marron" width="150" height="150"/>
         </div>
         <div class="contenedoresStyle" id="gris"></div>
-        <img src="" alt="contenedor marron" width="150" height="150"/>
+        <img src="../img/cubogris1.jpg" alt="contenedor gris" width="150" height="150"/>
+
         <div class="contenedoresStyle" id="aceite"></div>
 
-        <img src="" alt="contenedor marron" width="150" height="150"/>
+        <img src="../img/cuboaceite.jpg" alt="contenedor aceite" width="150" height="150"/>
+
         <div class="contenedoresStyle" id="azul"></div>
-        <img src="" alt="contenedor marron" width="150" height="150"/>
+        <img src="../img/cuboazul.jpg" alt="contenedor azul" width="150" height="150"/>
+
         <div class="contenedoresStyle" id="rojo"></div>
-        <img src="" alt="contenedor marron" width="150" height="150"/>
+        <img src="../img/cuborojo.jpg" alt="contenedor rojo" width="150" height="150"/>
+
         <div class="contenedoresStyle" id="negro"></div>
-        <img src="" alt="contenedor marron" width="150" height="150"/>
+        <img src="../img/cubonegro.jpg" alt="contenedor negro" width="150" height="150"/>
     </header>
 </body>
 </html>
