--- a/Proyecto01/Contenedores/Contenedores.html
+++ b/Proyecto01/Contenedores/Contenedores.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div>contenedores</div>
+        <div class="titulo">contenedores</div>
         <link href="../h1.html">H1</link>
     </header>
     <div class="contenedoresStyle" id="amarillo">
