--- a/Proyecto01/h1.html
+++ b/Proyecto01/h1.html
@@ -4,13 +4,14 @@
     <title>menosBasura.com</title>
     <meta charset="UTF-8">
     <meta name="author" content="nombre">
+    <link rel="stylesheet" href="css/normalize.css">
     <link href="css/h1.css" rel="stylesheet" type="text/css"/>
     <script src="js/script.js" type="text/javascript"></script>
     
 </head>
 <body>
     <header>
-        <p>Gestión de residuos</p>
+        <h1>Gestión de residuos</h1>
     </header>
     
     <div class="contenedores" id="contenedores">
