--- a/Proyecto01/contenedores/contenedores.html
+++ b/Proyecto01/contenedores/contenedores.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Docum4ent</title>
+    <title>menosBasura.com</title>
+    <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
