--- a/Proyecto01/h1.html
+++ b/Proyecto01/h1.html
@@ -12,6 +12,7 @@
 <body>
     <header>
         <h1>Gestión de residuos</h1>
+        <button class="btn-login" id="btn-login">Login</button>
     </header>
     
     <div class="contenedores" id="contenedores">
