subir html con nuevas imagenes

--- a/Proyecto01/contenedores/contenedores.html
+++ b/Proyecto01/contenedores/contenedores.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>menosBasura.com</title>
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Docum4ent</title>
+    <link rel="stylesheet" href="./prueba.css">
 </head>
 <body>
     <header>
@@ -13,28 +12,34 @@
         <link href="../h1.html">H1</link>
     </header>
     <div class="contenedoresStyle" id="amarillo">
-        <img src="../img/cuboamarillo.jpg" alt="contenedor amarillo" width="150" height="150"/>
+        <img src="./img/cuboamarillo.png" alt="contenedor amarillo"/>
     </div>
     <div class="contenedoresStyle" id="verde">
-        <img src="../img/cuboverde.jpg" alt="contenedor verde" width="150" height="150"/>
+        <img src="./img/cuboverde.png" alt="contenedor verde"  />
     </div>
-    <div class="contenedoresStyle" id="marron">
-        <img src="../img/cubomarron.png" alt="contenedor marron" width="150" height="150"/>
+    <div class="contenedoresStyle" id="naranja">
+        <img src="./img/cubnaranja.png" alt="contenedor naranja" />
     </div>
-    <div class="contenedoresStyle" id="gris"></div>
-    <img src="../img/cubogris1.jpg" alt="contenedor gris" width="150" height="150"/>
 
-    <div class="contenedoresStyle" id="aceite"></div>
+    <div class="contenedoresStyle" id="gris">
+        <img src="./img/cubogris.png" alt="contenedor gris" />
+    </div>
 
-    <img src="../img/cuboaceite.jpg" alt="contenedor aceite" width="150" height="150"/>
+    <div class="contenedoresStyle" id="aceite">
+        <img src="./img/cubomarron.png" alt="contenedor aceite"/>
+    </div>
 
-    <div class="contenedoresStyle" id="azul"></div>
-    <img src="../img/cuboazul.jpg" alt="contenedor azul" width="150" height="150"/>
+    <div class="contenedoresStyle" id="azul">
+        <img src="./img/cuboazul.png" alt="contenedor azul"/>
+    </div>
 
-    <div class="contenedoresStyle" id="rojo"></div>
-    <img src="../img/cuborojo.jpg" alt="contenedor rojo" width="150" height="150"/>
+    <div class="contenedoresStyle" id="rojo">
+        <img src="./img/cuborojo.png" alt="contenedor rojo" />
+    </div>
 
-    <div class="contenedoresStyle" id="negro"></div>
-    <img src="../img/cubonegro.jpg" alt="contenedor negro" width="150" height="150"/>
+    <div class="contenedoresStyle" id="negro">
+        <img src="./img/cubonegro.png" alt="contenedor negro" />
+    </div>
+
 </body>
 </html>
