--- a/Proyecto01/contenedores/contenedores.html
+++ b/Proyecto01/contenedores/contenedores.html
@@ -12,33 +12,33 @@
         <link href="../h1.html">H1</link>
     </header>
     <div class="contenedoresStyle" id="amarillo">
-        <img src="./img/cuboamarillo.png" alt="contenedor amarillo"/>
+        <img src="../img/cuboamarillo.png" alt="contenedor amarillo"/>
     </div>
     <div class="contenedoresStyle" id="verde">
-        <img src="./img/cuboverde.png" alt="contenedor verde"  />
+        <img src="../img/cuboverde.png" alt="contenedor verde"  />
     </div>
     <div class="contenedoresStyle" id="naranja">
-        <img src="./img/cubnaranja.png" alt="contenedor naranja" />
+        <img src="../img/cubnaranja.png" alt="contenedor naranja" />
     </div>
 
     <div class="contenedoresStyle" id="gris">
-        <img src="./img/cubogris.png" alt="contenedor gris" />
+        <img src="../img/cubogris.png" alt="contenedor gris" />
     </div>
 
     <div class="contenedoresStyle" id="aceite">
-        <img src="./img/cubomarron.png" alt="contenedor aceite"/>
+        <img src="../img/cubomarron.png" alt="contenedor aceite"/>
     </div>
 
     <div class="contenedoresStyle" id="azul">
-        <img src="./img/cuboazul.png" alt="contenedor azul"/>
+        <img src="../img/cuboazul.png" alt="contenedor azul"/>
     </div>
 
     <div class="contenedoresStyle" id="rojo">
-        <img src="./img/cuborojo.png" alt="contenedor rojo" />
+        <img src="../img/cuborojo.png" alt="contenedor rojo" />
     </div>
 
     <div class="contenedoresStyle" id="negro">
-        <img src="./img/cubonegro.png" alt="contenedor negro" />
+        <img src="../img/cubonegro.png" alt="contenedor negro" />
     </div>
 
 </body>
