--- a/Proyecto01/h1.html
+++ b/Proyecto01/h1.html
@@ -13,6 +13,7 @@
     <header>
         <h1>Gestión de residuos</h1>
         <button class="btn-login" id="btn-login">Login</button>
+        <button class="btn-register" id="btn-register">Register</button>
     </header>
     
     <div class="contenedores" id="contenedores">
