--- a/Proyecto01/h1.html
+++ b/Proyecto01/h1.html
@@ -15,7 +15,7 @@
         <button class="btn-login" id="btn-login">Login</button>
         <button class="btn-register" id="btn-register">Register</button>
     </header>
-    
+    <div id="contenedorGrande>
     <div class="contenedores" id="contenedores">
         <p>CONTENEDORES</p>
     </div>
@@ -24,6 +24,7 @@
     </div>
     <div class="curiosidades" id="curiosidades">
         <P>CURIOSIDADES</P>
+    </div>
     </div>
     <aside>
         <p>Fuentes</p>
