Algunos arreglos h1.html

--- a/Proyecto01/h1.html
+++ b/Proyecto01/h1.html
@@ -15,7 +15,7 @@
         <button class="btn-login" id="btn-login">Login</button>
         <button class="btn-register" id="btn-register">Register</button>
     </header>
-    <div id="contenedorGrande>
+    <div id="contenedorGrande">
     <div class="contenedores" id="contenedores">
         <p>CONTENEDORES</p>
     </div>
