--- a/Proyecto01/h1.html
+++ b/Proyecto01/h1.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="author" content="nombre">
     <link href="css/h1.css" rel="stylesheet" type="text/css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Croissant+One&display=swap" rel="stylesheet">
     <script src="js/script.js" type="text/javascript"></script>
     
 </head>
