nuevo div para los formularios

--- a/Proyecto01/h1.html
+++ b/Proyecto01/h1.html
@@ -14,8 +14,10 @@
 <body>
     <header>
         <h1>Gestión de residuos</h1>
-        <button class="btn-login" id="btn-login">Login</button>
-        <button class="btn-register" id="btn-register">Register</button>
+        <div id="froms">
+            <button class="btn-login" id="btn-login">Login</button>
+            <button class="btn-register" id="btn-register">Register</button>
+        </div>
     </header>
     <div id="contenedorGrande">
     <div class="contenedores" id="contenedores">
