--- a/Proyecto01/contenedores/contenedores.html
+++ b/Proyecto01/contenedores/contenedores.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Docum4ent</title>
-    <link rel="stylesheet" href="./prueba.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
         <div class="titulo">contenedores</div>
         <link href="../h1.html">H1</link>
     </header>
+    <div class="contenedores1">
     <div class="contenedoresStyle" id="amarillo">
         <img src="../img/cuboamarillo.png" alt="contenedor amarillo"/>
     </div>
@@ -24,7 +25,8 @@
     <div class="contenedoresStyle" id="gris">
         <img src="../img/cubogris.png" alt="contenedor gris" />
     </div>
-
+</div>
+<div class="contenedores2">
     <div class="contenedoresStyle" id="aceite">
         <img src="../img/cubomarron.png" alt="contenedor aceite"/>
     </div>
@@ -39,6 +41,7 @@
 
     <div class="contenedoresStyle" id="negro">
         <img src="../img/cubonegro.png" alt="contenedor negro" />
+    </div>
     </div>
 
 </body>
