nuevo icono para la pag principal

--- a/Proyecto01/h1.html
+++ b/Proyecto01/h1.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <header>
+        <img src="./img/icono pag principal.png" alt="icono">
         <h1>Gestión de residuos</h1>
         <div id="froms">
             <button class="btn-login" id="btn-login">Login</button>
