nuevo div para envolver a los divs

--- a/Proyecto01/h1.html
+++ b/Proyecto01/h1.html
@@ -20,6 +20,7 @@
             <button class="btn-register" id="btn-register">Register</button>
         </div>
     </header>
+<div id="contenedorMuyGrande">
     <div id="contenedorGrande">
     <div class="contenedores" id="contenedores">
         <p>CONTENEDORES</p>
@@ -31,6 +32,7 @@
         <P>CURIOSIDADES</P>
     </div>
     </div>
+</div>
     <aside>
         <p>Fuentes</p>
     </aside>
