--- a/Proyecto01/h1.html
+++ b/Proyecto01/h1.html
@@ -34,8 +34,8 @@
         <P>CURIOSIDADES</P>
     </div>
     </div>
-    <aside>
-        <p>Fuentes</p>
+    <aside id="fuentes">
+
     </aside>
 </body>
 </html>
