cambios en pagina contenedores.htmlflexbox

--- a/Proyecto01/contenedores/contenedores.html
+++ b/Proyecto01/contenedores/contenedores.html
@@ -10,8 +10,8 @@
 
 <body>
     <header>
-        <div class="titulo">contenedores</div>
-        <link href="../h1.html">H1</link>
+        <h1>contenedores</h1>
+       
     </header>
     <div class="contenedores1">
 
@@ -35,6 +35,8 @@
         <img src="../img/cubonegro.png" alt="contenedor negro" />
 
     </div>
+<!-- boton para volver a inicio -->
+    <a href="../h1.html">boton coming soon</a>
 
 </body>
 
