cambios en header y boton de incio

--- a/Proyecto01/contenedores/contenedores.html
+++ b/Proyecto01/contenedores/contenedores.html
@@ -10,8 +10,10 @@
 
 <body>
     <header>
+        <a class="btn-inicio" href="../h1.html">
+            <img src="../img/flechaAtras.png" alt="boton inicio" width="100px">
+        </a>
         <h1>contenedores</h1>
-       
     </header>
     <div class="contenedores1">
 
@@ -36,7 +38,7 @@
 
     </div>
 <!-- boton para volver a inicio -->
-    <a href="../h1.html">boton coming soon</a>
+    
 
 </body>
 
