estructura html de login

--- a/Proyecto01/formulario/formularioLogin.html
+++ b/Proyecto01/formulario/formularioLogin.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Login</h1>
+    <form name="formulario">
+        <label for="email">Escribe tu email</label><br>
+        <input type="email" name="email" id="email"><br>
+
+        <label for="contraseña">Escribe tu contraseña</label><br>
+        <input type="password" name="contraseña" id="contraseña"><br>
+
+        <input type="button" value="Iniciar Sesion" name="boton" id="boton">
+
+    </form>
 </body>
 </html>
