--- a/Proyecto01/formulario/formularioLogin.html
+++ b/Proyecto01/formulario/formularioLogin.html
@@ -13,6 +13,7 @@
 
         <label for="contraseña">Escribe tu contraseña</label><br>
         <input type="password" name="contraseña" id="contraseña"><br>
+        <p>¿Has olvidado tu contraseña? Haz click aqui:</p>
 
         <input type="button" value="Iniciar Sesion" name="boton" id="boton">
 
