algo de estilo para login y linkeado con css

--- a/Proyecto01/formulario/formularioLogin.html
+++ b/Proyecto01/formulario/formularioLogin.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/cssLogin.css" type="text/css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Login</h1>
+    <h1>Login</h1><br>
     <form name="formulario">
         <label for="email">Escribe tu email</label><br>
         <input type="email" name="email" id="email"><br>
