--- a/Proyecto01/contenedores/cubos/cuboverde.html
+++ b/Proyecto01/contenedores/cubos/cuboverde.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=ç, initial-scale=1.0">
-    <link rel="stylesheet" href="..CSS/verde.css">
+    <link rel="stylesheet" href=".CSS/verde.css">
     <title>Document</title>
 </head>
 <body>
 
 <div class="imagen" id="centrado">
-    <img src="..imagen/cubo verde.jpg" alt="imagen cubos" width="1200" height="350" />
+    <img src=".imagen/cubo verde.jpg" alt="imagen cubos" width="1200" height="350" />
    
 </div>
 <div class="frase" id="centrado">
@@ -18,7 +18,7 @@
 </div>
 <br><br><br>
 <div class="si">
-    <img src="..imagen/up.png" alt="sí" width="80" height="80" />
+    <img src=".imagen/up.png" alt="sí" width="80" height="80" />
     <ul>
         <li>Botellas de vidrio</li><br>
         <li>Frascos de vidrio</li><br>
@@ -27,7 +27,7 @@
 </div>
 
 <div class="no">
-    <img src="..imagen/down.png" alt="sí" width="80" height="80" />
+    <img src=".imagen/down.png" alt="sí" width="80" height="80" />
     <ul>
         <li>Bombillas</li><br>
         <li>Bombillas</li>
