nuevo div para almacenar el form

--- a/Proyecto01/formulario/formularioLogin.html
+++ b/Proyecto01/formulario/formularioLogin.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="cont">
     <h1>Login</h1><br>
     <form name="formulario">
         <label for="email">Escribe tu email</label><br>
@@ -19,5 +20,6 @@
         <input type="button" value="Iniciar Sesion" name="boton" id="boton">
 
     </form>
+</div>
 </body>
 </html>
