--- a/Proyecto01/contenedores/contenedores.html
+++ b/Proyecto01/contenedores/contenedores.html
@@ -19,7 +19,7 @@
 
         <img src="../img/cuboamarillo.png" alt="contenedor amarillo" />
 
-        <img src="../img/cuboverde.png" alt="contenedor verde" />
+        <a href="./cubos/cuboverde.html"><img src="../img/cuboverde.png" alt="contenedor verde" /></a>
 
         <img src="../img/cubnaranja.png" alt="contenedor naranja" />
 
