--- a/Proyecto01/contenedores/contenedores.html
+++ b/Proyecto01/contenedores/contenedores.html
@@ -19,7 +19,9 @@
 
         <img src="../img/cuboamarillo.png" alt="contenedor amarillo" />
 
-        <a href="./cubos/cuboverde.html"><img src="../img/cuboverde.png" alt="contenedor verde" /></a>
+        <a class="btn-inicio" href="./cubos/cuboverde.html">
+            <img src="../img/cuboverde.png" alt="contenedor verde" />
+        </a>
 
         <img src="../img/cubnaranja.png" alt="contenedor naranja" />
 
