--- a/Proyecto01/formulario/formularioLogin.html
+++ b/Proyecto01/formulario/formularioLogin.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="cont">
-    <h1>¿Vas a iniciar secion con tu basuraCuenta?</h1><br>
+    <h1>¿Vas a iniciar secion con tu basuraCuenta?</h1><br><br>
     <form name="formulario">
         <label for="email">Escribe tu email</label><br>
         <input type="email" name="email" id="email"><br>
