--- a/Proyecto01/h1.html
+++ b/Proyecto01/h1.html
@@ -4,7 +4,7 @@
     <title>menosBasura.com</title>
     <meta charset="UTF-8">
     <meta name="author" content="nombre">
-    <link href="css/h1.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="css/responsive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Croissant+One&display=swap" rel="stylesheet">
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
     <script src="js/script.js" type="text/javascript"></script>
     
+    <link href="css/h1.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
     <header>
