--- a/Proyecto01/curiosidades/curiosidades.html
+++ b/Proyecto01/curiosidades/curiosidades.html
@@ -5,9 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curiosidades</title>
     <link rel="stylesheet" href="../css/responsive.css">
+    <style>
+        .largo{
+            width: 100vw;
+
+        }
+    </style>
 </head>
 <body>
-   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum ipsa aliquam obcaecati. Necessitatibus eligendi nobis enim adipisci alias! Nulla sapiente eligendi eaque quod exercitationem magnam laboriosam dolor iure harum autem.</p> 
+    <div class="largo">
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum ipsa aliquam obcaecati. Necessitatibus eligendi nobis enim adipisci alias! Nulla sapiente eligendi eaque quod exercitationem magnam laboriosam dolor iure harum autem.</p> 
+    </div>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum ipsa aliquam obcaecati. Necessitatibus eligendi nobis enim adipisci alias! Nulla sapiente eligendi eaque quod exercitationem magnam laboriosam dolor iure harum autem.</p> 
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum ipsa aliquam obcaecati. Necessitatibus eligendi nobis enim adipisci alias! Nulla sapiente eligendi eaque quod exercitationem magnam laboriosam dolor iure harum autem.</p> 
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum ipsa aliquam obcaecati. Necessitatibus eligendi nobis enim adipisci alias! Nulla sapiente eligendi eaque quod exercitationem magnam laboriosam dolor iure harum autem.</p> 
