--- a/Proyecto01/formulario/formularioLogin.html
+++ b/Proyecto01/formulario/formularioLogin.html
@@ -9,7 +9,7 @@
 <body>
     <div id="cont">
     <div id="titulo">
-        <h1>¿Vas a iniciar secion con tu basuraCuenta?</h1><br><br>
+        <h1>¿Vas a iniciar sesion con tu basuraCuenta?</h1><br><br>
     </div>
     <div id="formulario">
     <form name="formulario">
