arreglo e de clases

--- a/Proyecto01/h1.html
+++ b/Proyecto01/h1.html
@@ -28,10 +28,10 @@
     <div class="contenedores" id="contenedores">
         <p>CONTENEDORES</p>
     </div>
-    <div class="reciclaje" id="reciclaje">
+    <div class="contenedores"  id="reciclaje">
         <p>RECICLAJE</p>
     </div>
-    <div class="curiosidades" id="curiosidades">
+    <div class="contenedores"  id="curiosidades">
         <P>CURIOSIDADES</P>
     </div>
     </div>
