--- a/Proyecto01/h1.html
+++ b/Proyecto01/h1.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <img src="./img/icono pag principal.png" alt="icono">
+        <img src="./img/mainIcon.png" alt="icono">
         <h1>Gestión de residuos</h1>
         <div id="froms">
             <button class="btn-login" id="btn-login">Login</button>
