nueva classe para los input

--- a/Proyecto01/formulario/formularioLogin.html
+++ b/Proyecto01/formulario/formularioLogin.html
@@ -17,10 +17,10 @@
     <div id="formulario">
     <form name="formulario">
         <label for="email">Escribe tu email</label><br>
-        <input type="email" name="email" id="email"><br>
+        <input type="email" name="email" id="email" class="input"><br>
 
         <label for="contraseña">Escribe tu contraseña</label><br>
-        <input type="password" name="contraseña" id="contraseña"><br>
+        <input type="password" name="contraseña" id="contraseña" class="input"><br>
         <p>¿Has olvidado tu contraseña? Haz click aqui:</p>
 
         <input type="button" value="Iniciar Sesion" name="boton" id="boton">
