comienzo de formulario register

--- a/Proyecto01/formulario/formularioRegister.html
+++ b/Proyecto01/formulario/formularioRegister.html
@@ -6,6 +6,32 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="divGrande">
+        <div id="titulo">
+            <h1>¿Quieres tener una basuraCuenta?</h1>
+            <h2>Pues tardeas menos de 2 min en hacerte una</h2>
+        </div>
+        <div id="formulario">
+            <form name="formulario">
+                <label for="nombre">Introduce tu nombre</label><br>
+                <input type="text" name="nombre" id="nombre"><br>
+
+                <label for="apellidos">Introduce tus apellidos</label><br>
+                <input type="text" name="apellidos" id="apellidos"><br>
+
+
+                <label for="email">Introduce tu email</label><br>
+                <input type="email" name="email" id="email"><br>
+
+
+                <label for="password">Introduce una contraseña</label><br>
+                <input type="password" name="password" id="password"><br>
+
+                <label for="passwordRepeat">Introduce otra vez la contraseña</label><br>
+                <input type="password" name="passwordRepeat" id="passwordRepeat"><br>
+
+            </form>
+        </div>
+    </div>
 </body>
 </html>
