subir marron html, cambiarn nombre imagenes

--- a/Proyecto01/contenedores/cubos/cuboazul.html
+++ b/Proyecto01/contenedores/cubos/cuboazul.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="./azul.css">
     <title>Cubo azul</title>
 </head>
-<body>
+<body style="background-image: url(./imagen/fondoAzul.jpeg);">
 
 <div class="imagen" id="centrado">
-    <img src="./imagen/auzl4.jpg" alt="imagen cubos" width="1200" height="350" />
+    <img src="./imagen/PortalAzul.jpg" alt="imagen cubos" width="1200" height="350" />
    
 </div>
 <div class="frase" id="centrado">
