--- a/Proyecto01/contenedores/cubos/cuboverde.html
+++ b/Proyecto01/contenedores/cubos/cuboverde.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=ç, initial-scale=1.0">
-    <link rel="stylesheet" href="./CSS/verde.css">
+    <link rel="stylesheet" href="./CSS/azul.css">
     <title>Document</title>
 </head>
-<body>
+<body style="background-image: url(./imagen/fondoVerde.jpg);">
 
 <div class="imagen" id="centrado">
-    <img src="./imagen/cubo verde.jpg" alt="imagen cubos" width="1200" height="350" />
+    <img src="./imagen/PortalVerde.jpg" alt="imagen cubos" width="1200" height="350" />
    
 </div>
 <div class="frase" id="centrado">
