corregir error imagen cubo marron

--- a/Proyecto01/contenedores/cubos/cubomarron.html
+++ b/Proyecto01/contenedores/cubos/cubomarron.html
@@ -9,7 +9,7 @@
 <body style="background-image: url(./imagen/fondoMarron.jpg);">
 
 <div class="imagen" id="centrado">
-    <img src="./PortalMarorn.jpg" alt="imagen cubos" width="1200" height="350" />
+    <img src="./imagen/PortalMarorn.jpg" alt="imagen cubos" width="1200" height="350" />
    
 </div>
 <div class="frase" id="centrado">
