--- a/Proyecto01/contenedores/cubos/cuboazul.html
+++ b/Proyecto01/contenedores/cubos/cuboazul.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=ç, initial-scale=1.0">
-    <link rel="stylesheet" href="./azul.css">
+    <link rel="stylesheet" href="./CSS/azul.css">
     <title>Cubo azul</title>
 </head>
 <body style="background-image: url(./imagen/fondoAzul.jpeg);">
