nuevos estilos y arreglos en el html

--- a/Proyecto01/formulario/formularioRegister.html
+++ b/Proyecto01/formulario/formularioRegister.html
@@ -10,7 +10,7 @@
     <div id="divGrande">
         <div id="titulo">
             <h1>¿Quieres tener una basuraCuenta?</h1>
-            <h2>Pues tardeas menos de 2 min en hacerte una</h2>
+            <h2>Pues tardas menos de 2 min en hacerte una</h2>
         </div>
         <div id="formulario">
             <form name="formulario">
