nueva clase para llos input

--- a/Proyecto01/formulario/formularioRegister.html
+++ b/Proyecto01/formulario/formularioRegister.html
@@ -18,21 +18,21 @@
         <div id="formulario">
             <form name="formulario">
                 <label for="nombre">Introduce tu nombre</label><br>
-                <input type="text" name="nombre" id="nombre"><br>
+                <input type="text" name="nombre" id="nombre" class="input"><br>
 
                 <label for="apellidos">Introduce tus apellidos</label><br>
-                <input type="text" name="apellidos" id="apellidos"><br>
+                <input type="text" name="apellidos" id="apellidos" class="input"><br>
 
 
                 <label for="email">Introduce tu email</label><br>
-                <input type="email" name="email" id="email"><br>
+                <input type="email" name="email" id="email" class="input"><br>
 
 
                 <label for="password">Introduce una contraseña</label><br>
-                <input type="password" name="password" id="password"><br>
+                <input type="password" name="password" id="password" class="input"><br>
 
                 <label for="passwordRepeat">Introduce otra vez la contraseña</label><br>
-                <input type="password" name="passwordRepeat" id="passwordRepeat"><br>
+                <input type="password" name="passwordRepeat" id="passwordRepeat" class="input"><br>
 
             </form>
         </div>
