button crear cuenta

--- a/Proyecto01/formulario/formularioRegister.html
+++ b/Proyecto01/formulario/formularioRegister.html
@@ -34,6 +34,8 @@
                 <label for="passwordRepeat">Introduce otra vez la contraseña</label><br>
                 <input type="password" name="passwordRepeat" id="passwordRepeat" class="input"><br>
 
+                <input type="button" value="Crear basuraCuenta" name="boton" id="boton">
+
             </form>
         </div>
     </div>
