--- a/Proyecto01/contenedores/contenedores.html
+++ b/Proyecto01/contenedores/contenedores.html
@@ -10,9 +10,11 @@
 
 <body>
     <header>
+        <div>
         <a class="btn-inicio" href="../h1.html">
             <img src="../img/flechaAtras.png" alt="boton inicio" width="100px">
         </a>
+        </div>
         <h1>contenedores</h1>
     </header>
     <div class="contenedores1">
