--- a/Proyecto01/contenedores/cubos/cuborojo.html
+++ b/Proyecto01/contenedores/cubos/cuborojo.html
@@ -4,41 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=ç, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/azul.css">
-    <title>Cubo rojo</title>
+    <title>Contenedor de residuos peligrosos</title>
 </head>
-<body style="background-image: url();">
+<body style="background-image: url(./imagen/FondoRojo.jpg); background-repeat: no-repeat; background-size: 100%;">
 
 <div class="imagen" id="centrado">
-    <img src="./imagen/PortalRojo.jpg" alt="imagen cubos" width="1200" height="350" />
+    <img src="./PortalRojo.jpg" alt="imagen cubos" width="1200" height="350" />
    
 </div>
 <div class="frase" id="centrado">
     <p>El contenedor rojo es más especial, no se suele encontrar en los núcleos urbanos con frecuencia, 
         y es el destinado a contener residuos tóxicos y peligrosos, como desechos hospitalarios o baterías. 
-        Entre los desechos que se incluyen en esta categoría se encuentran: desechos hospitalarios, baterías, pilas, insecticidas, aerosoles, aceites o productos tecnológicos.
-        Contiene residuos que podrían representar un riesgo para las personas y los animales.
-       Este contenedor se transporta hasta un lugar dedicado a su destrucción segura.
+        Este contenedor se transporta hasta un lugar dedicado a su destrucción segura.
  </p>
 </div>
 <br><br><br>
 <div class="si">
     <img src="./imagen/up.png" alt="sí" width="80" height="80" />
     <ul>
-        <li>Papel</li><br>
-        <li>Cajas de cartón</li><br>
-        <li>Papel de envolver</li>
+        <li>Desechos hospitalarios</li><br>
+        <li>Pilas y baterías</li><br>
+        <li>Productos tecnológicos</li>
     </ul>      
 </div>
 
 <div class="no">
     <img src="./imagen/down.png" alt="sí" width="80" height="80" />
     <ul>
-        <li>Briks</li>
-        <p>Debe ir al contenedor amarillo</p>
-        <li>Servilletas y papel de cocina usado</li>
-        <p>Debe ir al contenedor de residuos orgánicos</p>
-        <li>Compresas y pañales</li>
-        <p>Debe ir al contenedor de restos</p>
+        <li>Resto de residuos habituales</li>
+        <p>Deben ir al contenedor correspondiente</p>
+    
     </ul>  
 </div>
 
