cambiar url rojo

--- a/Proyecto01/contenedores/cubos/cuborojo.html
+++ b/Proyecto01/contenedores/cubos/cuborojo.html
@@ -9,7 +9,7 @@
 <body style="background-image: url(./imagen/FondoRojo.jpg); background-repeat: no-repeat; background-size: 100%;">
 
 <div class="imagen" id="centrado">
-    <img src="./PortalRojo.jpg" alt="imagen cubos" width="1200" height="350" />
+    <img src="./imagen/PortalRojo.jpg" alt="imagen cubos" width="1200" height="350" />
    
 </div>
 <div class="frase" id="centrado">
