enlazar contenedores con cubos

--- a/Proyecto01/contenedores/contenedores.html
+++ b/Proyecto01/contenedores/contenedores.html
@@ -21,22 +21,28 @@
 
         <img src="../img/cuboamarillo.png" alt="contenedor amarillo" />
 
-        <a class="btn-inicio" href="./cubos/cuboverde.html">
+        <a href="./cubos/cuboverde.html">
             <img src="../img/cuboverde.png" alt="contenedor verde" />
         </a>
 
         <img src="../img/cubnaranja.png" alt="contenedor naranja" />
 
-        <img src="../img/cubogris.png" alt="contenedor gris" />
-
+        <a href="./cubos/cubogris.html">
+            <img src="../img/cubogris.png" alt="contenedor gris" />
+        </a>
     </div>
     <div class="contenedores2">
+        <a href="./cubos/cubomarron.html">
+            <img src="../img/cubomarron.png" alt="contenedor restos" />
+        </a>
 
-        <img src="../img/cubomarron.png" alt="contenedor aceite" />
+        <a href="./cubos/cuboazul.html">
+          <img src="../img/cuboazul.png" alt="contenedor azul" />
+        </a>
 
-        <img src="../img/cuboazul.png" alt="contenedor azul" />
-
-        <img src="../img/cuborojo.png" alt="contenedor rojo" />
+        <a href="./cubos/cuborojo.html">
+            <img src="../img/cuborojo.png" alt="contenedor rojo" />
+        </a>
 
         <img src="../img/cubonegro.png" alt="contenedor negro" />
 
