--- a/Proyecto01/curiosidades/curiosidades.html
+++ b/Proyecto01/curiosidades/curiosidades.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curiosidades</title>
     <link rel="stylesheet" href="../css/responsive.css">
+    <link rel="shortcut icon" href="./img/mainIcon.ico" type="image/x-icon">
     <style>
         .largo{
             width: 100vw;
