--- a/Proyecto01/reciclaje/reciclaje.html
+++ b/Proyecto01/reciclaje/reciclaje.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Reciclaje</h1>
+    <div class="texto" id="pregunta">
+        <h3>¿Que es el reciclaje?</h3>
+    </div>
 </body>
 </html>
