--- a/Proyecto01/reciclaje/reciclaje.html
+++ b/Proyecto01/reciclaje/reciclaje.html
@@ -30,8 +30,8 @@
         <div id="subTitulo4">
             <h2>Tecnicas de reciclaje</h2>
         </div>
-        <div id="tablaReciclaje">
-            <table border="1">
+        <div >
+            <table id="tablaReciclaje" border="1">
                 <tr>
                     <th rowspan="5">Cubos</th>
                     <td>Verde</td>
