--- a/Proyecto01/reciclaje/reciclaje.html
+++ b/Proyecto01/reciclaje/reciclaje.html
@@ -31,7 +31,7 @@
             <h2>Tecnicas de reciclaje</h2>
         </div>
         <div >
-            <table id="tablaReciclaje" border="1">
+            <table id="tablaReciclaje">
                 <tr>
                     <th rowspan="5">Cubos</th>
                     <td>Verde</td>
