todo el html de reciclaje hecho

--- a/Proyecto01/reciclaje/reciclaje.html
+++ b/Proyecto01/reciclaje/reciclaje.html
@@ -52,8 +52,8 @@
                     <td>Se reocgen los restos por medio de camiones y son transpotados a una incineradora</td>
                     <td>En el cubo naranja solo se recoge el aceite de origen domestico, el que se usa para cocinar, de forma embotellada.</td>
                     <td>Se clasifican segun la calidad del producto y se compactan para su transporte</td>
-                    <td></td>
-                    <td></td>
+                    <td>EL proceso de reciclaje de los residuos organicos suele ser destinada al abono oránico, el compost</td>
+                    <td>Primero tratan a los residuos quitando impurezas o materiales que si se puedan aprovechar. </td>
                 </tr>
                 <tr>
                     <th>2º</th>
@@ -64,8 +64,8 @@
                     <td>Se queman recuperando el poco valor energético que tenian en forma de electricidad </td>
                     <td>Al aceite reciclado se le elimina el agua y otras impurezas</td>
                     <td>Se procesan industrialmente en una máquina especial para ello conocida con el nombre de pulper</td>
-                    <td></td>
-                    <td></td>
+                    <td>Para hacer el compost primero se almacenan los residuos organicos y se dejan que vaya calentando poco a poco con la actividad de los microorganismos (50,70ºC)</td>
+                    <td>Luego son sometidos a un proceso de descomposicion en el que se compactan los residuos </td>
                 </tr>
                 <tr>
                     <th>3º</th>
@@ -78,8 +78,8 @@
                     <td>Se depuran los gases provenientes de la combustion para no dañar el medio ambiente</td>
                     <td>Una vez depurado el aceite es destinado a fabricas de biodiesel, de pintura, de asfalto y mas industrias</td>
                     <td>Se produce una pasta que luego pasará por un proceso para quitar impurezas</td>
-                    <td></td>
-                    <td></td>
+                    <td>Los mircroorganismos antes mencionados se tranforman en unos mas resitentes al calor y las temperaturas suban a 100ºC</td>
+                    <td rowspan="2">Despues estos son transpotadosy almacenados en vertederos</td>
                 </tr>
                 <tr>
                     <th>4º</th>
@@ -92,8 +92,8 @@
                     <td>los restos de la incineracion pueden llevarselo alguna emprease que si le pueda dar un uso o se pueden almacenar</td>
                     <td>Este aceite no puede usar para la alimentacion debeido al uso de productos quimicos en el. </td>
                     <td>Y dependiendo del uso que se le quiera dar se le puede hacer un blanqueamiento de las fibras para hacer papel reciclado</td>
-                    <td></td>
-                    <td></td>
+                    <td>Tras un periodo de enfriamiento, con el compost ya completo, hay que madurarlo. Esta ultima fase es a temperatura ambiente. 
+                    </td>
                 </tr>
 
 
