enlazar aceite.html con principal

--- a/Proyecto01/contenedores/cubos/punto_aceite.html
+++ b/Proyecto01/contenedores/cubos/punto_aceite.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=ç, initial-scale=1.0">
-    <link rel="stylesheet" href="./aceite.css">
+    <link rel="stylesheet" href="./CSS/aceite.css">
     <title>Contenedor restos de residuos</title>
 </head>
-<body style="background-image: url(./FondoAceite.jpg); background-repeat: no-repeat; background-size: 100%;">
+<body style="background-image: url(./imagen/FondoAceite.jpg); background-repeat: no-repeat; background-size: 100%;">
 
 <div class="imagen" id="centrado">
-    <img src="./PortalAceite1.jpg" alt="imagen cubos" width="1200" height="350" />
+    <img src="./imagen/PortalAceite1.jpg" alt="imagen cubos" width="1200" height="350" />
    
 </div>
 <div class="frase" id="centrado">
