--- a/Proyecto01/contenedores/contenedores.html
+++ b/Proyecto01/contenedores/contenedores.html
@@ -27,8 +27,10 @@
             <img src="../img/cuboverde.png" alt="contenedor verde" />
         </a>
 
+        <a href="./cubos/punto_aceite.html">
         <img src="../img/cubnaranja.png" alt="contenedor naranja" />
-
+        </a>
+        
         <a href="./cubos/cubogris.html">
             <img src="../img/cubogris.png" alt="contenedor gris" />
         </a>
