--- a/Proyecto01/h1.html
+++ b/Proyecto01/h1.html
@@ -32,8 +32,8 @@
     <div class="contenedores"  id="reciclaje">
         <p>RECICLAJE</p>
     </div>
-    <div class="contenedores"  id="curiosidades">
-        <P>CURIOSIDADES</P>
+    <div class="tratamiento" id="tratamiento">
+        <P>TRATAMIENTO DE RESIDUOS URBANOS</P>
     </div>
     </div>
     <aside id="fuentes">
