nueva fuente para el texto en general

--- a/Proyecto01/reciclaje/reciclaje.html
+++ b/Proyecto01/reciclaje/reciclaje.html
@@ -14,7 +14,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header id="titulo" class="texto">
+    <header id="titulo">
     <h1>Reciclaje</h1>
     </header>
     <main class="texto" id="main">
