nuevos estilos para la tabla

--- a/Proyecto01/reciclaje/reciclaje.html
+++ b/Proyecto01/reciclaje/reciclaje.html
@@ -37,7 +37,7 @@
             <h2>Tecnicas de reciclaje</h2>
         </div>
         <table id="tablaReciclaje">
-            <tr>
+            <tr id="primeraFila">
                 <th>Cubos</th>
                 <td>Verde</td>
                 <td colspan="2">Amarillo</td>
