arreglos en la pag principal

--- a/Proyecto01/h1.html
+++ b/Proyecto01/h1.html
@@ -32,7 +32,7 @@
     <div class="contenedores"  id="reciclaje">
         <p>RECICLAJE</p>
     </div>
-    <div class="tratamiento" id="tratamiento">
+    <div class="contenedores" id="reciclaje">
         <P>TRATAMIENTO DE RESIDUOS URBANOS</P>
     </div>
     </div>
