arreglos para reciclaje

--- a/Proyecto01/reciclaje/reciclaje.html
+++ b/Proyecto01/reciclaje/reciclaje.html
@@ -17,23 +17,23 @@
     <header id="titulo">
     <h1>Reciclaje</h1>
     </header>
-    <main class="texto" id="main">
-        <div id="subTitulo1">
+    <main id="main">
+        <div  class="texto" id="subTitulo1">
             <h2>¿Que es el reciclaje?</h2>
         </div>
-        <div id="subTitulo2">
+        <div class="texto" id="subTitulo2">
             <h4>Esta muy bien todo eso de tirar la basura a su sitio, pero ¿Que hacen con la basura?</h4>
         </div>
-        <div id="parrafo1">
+        <div class="texto" id="parrafo1">
         <p>Reciclaje significa convertir cosas que ya no queremos o necesitamos en nuevos materiales que pueden ser utilizados nuevamente en lugar de ser arrojados como basura. Es un proceso en el que damos nueva vida a objetos que hemos utilizado, evitando así desperdiciar recursos y cuidando el medio ambiente</p>
         </div>
-        <div id="subTitulo3">
+        <div  class="texto" id="subTitulo3">
             <h2>¿Para que sirve reciclar?</h2>
         </div>
-        <div id="parrafo2">
+        <div class="texto" id="parrafo2">
             <p>Reciclando evitas que los productos y materiales se conviertan en residuos, transformándolos en otros completamente nuevos, alargando su vida útil y ayudando a la preservación de los recursos naturales del planeta</p>
         </div>
-        <div id="subTitulo4">
+        <div class="texto" id="subTitulo4">
             <h2>Tecnicas de reciclaje</h2>
         </div>
         <table id="tablaReciclaje">
