Add: header.css

--- a/Proyecto01/tratamiento/fisico.html
+++ b/Proyecto01/tratamiento/fisico.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tratamiento de Residuos Urbanos</title>
+    <title>Tratamiento de Residuos Urbanos Fisicos</title>
     <link rel="stylesheet" href="../css/responsive.css">
     <link rel="shortcut icon" href="../img/mainIcon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
+
     <style>
         .largo{
             width: 100vw;
@@ -13,6 +15,14 @@
     </style>
 </head>
 <body>
+    <header>
+        <img src="../img/mainIcon.png" alt="icono">
+        <h1>Gestión de residuos</h1>
+        <div id="froms">
+            <button class="btn-login" id="btn-login">Login</button>
+            <button class="btn-register" id="btn-register">Register</button>
+        </div>
+    </header>
     <div class="largo">
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum ipsa aliquam obcaecati. Necessitatibus eligendi nobis enim adipisci alias! Nulla sapiente eligendi eaque quod exercitationem magnam laboriosam dolor iure harum autem.</p> 
