--- a/Proyecto01/h1.html
+++ b/Proyecto01/h1.html
@@ -14,6 +14,7 @@
     <script src="js/script.js" type="text/javascript"></script>
     
     <link href="css/h1.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="css/header.css">
     <link rel="shortcut icon" href="./img/mainIcon.ico" type="image/x-icon">
 </head>
 <body>
