--- a/Proyecto01/tratamiento/fisico.html
+++ b/Proyecto01/tratamiento/fisico.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/responsive.css">
     <link rel="shortcut icon" href="../img/mainIcon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/header.css">
 
     <style>
         .largo{
